Fix info images gap

--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ body{
     justify-content: space-around;
     align-items: center;
     width: 10px;
-    gap: 35px;
+    gap: 40px;
 }
 
 .info-title {
